[metadata]
name = saltext.relenv
description = Salt Extension for interacting with Relenv
long_description = file: README.md
long_description_content_type = text/markdown
author = Tyler Levy Conde
author_email = tyler.levy-conde@broadcom.com
keywords = salt-extension
version = 0.1.2
url = https://github.com/Akm0d/saltext-relenv
project_urls =
    Source=https://github.com/Akm0d/saltext-relenv
    Tracker=https://github.com/Akm0d/saltext-relenv/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.5
setup_requires =
  wheel
  setuptools>=50.3.2
install_requires =
  salt>=3006
  relenv>=0.19.0

[options.packages.find]
where = src
exclude =
    tests

# When targetting Salt < 3003, you can remove the other 'options.entry_points' section and use this one
#[options.entry_points]
#salt.loader=
#
#  module_dirs = saltext.relenv.loader:get_module_dirs
#
#  state_dirs = saltext.relenv.loader:get_state_dirs
#

[options.entry_points]
salt.loader=
  saltext.relenv = saltext.relenv

[requirements-files]
install_requires = requirements/base.txt
extras_require =
  tests = requirements/tests.txt

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[sdist]
owner = root
group = root
